--- a/website/pages/docs/sdk/swagger.mdx
+++ b/website/pages/docs/sdk/swagger.mdx
@@ -215,10 +215,10 @@ export default config;
 ```
     </Tab>
     <Tab>
-```typescript filename="INestiaConfig.ts" showLineNumbers {12-15, 31-36, 81-88}
-import ts from "typescript";
+```typescript filename="INestiaConfig.ts" showLineNumbers {12-22, 142-156}
+import type ts from "typescript";
 
-import { ISwaggerDocument } from "./structures/ISwaggerDocument";
+import type { ISwaggerDocument } from "./structures/ISwaggerDocument";
 import type { StripEnums } from "./utils/StripEnums";
 
 /**
@@ -227,6 +227,13 @@ import type { StripEnums } from "./utils/StripEnums";
  * @author Jeongho Nam - https://github.com/samchon
  */
 export interface INestiaConfig {
+    /**
+     * Building `swagger.json` is also possible.
+     *
+     * If not specified, you can't build the `swagger.json` file.
+     */
+    swagger?: INestiaConfig.ISwaggerConfig;
+
     /**
      * List of files or directories containing the NestJS controller classes.
      */
@@ -240,18 +247,29 @@ export interface INestiaConfig {
     output?: string;
 
     /**
-     * Output directory that e2e test functions would be placed in.
-     * 
-     * If not configured, you can't generate automatic e2e test functions.
+     * Target directory that SDK distribution files would be placed in.
+     *
+     * If you configure this property and runs `npx nestia sdk` command,
+     * distribution environments for the SDK library would be generated.
+     *
+     * After the SDK library generation, move to the `distribute` directory,
+     * and runs `npm publish` command, then you can share SDK library with
+     * other client (frontend) developers.
+     *
+     * Recommend to use `"packages/api"` value.
      */
-    e2e?: string;
+    distribute?: string;
 
     /**
-     * Building `swagger.json` is also possible.
+     * Target directory that e2e test functions would be placed in.
      *
-     * If not specified, you can't build the `swagger.json`.
+     * If you configure this property and runs `npx nestia e2e` command,
+     * `@nestia/sdk` will analyze your NestJS backend server code, and
+     * generates e2e test functions for every API endpoints.
+     *
+     * If not configured, you can't run `npx nestia e2e` command.
      */
-    swagger?: INestiaConfig.ISwaggerConfig;
+    e2e?: string;
 
     /**
      * Compiler options for the TypeScript.
@@ -269,11 +287,55 @@ export interface INestiaConfig {
      *
      * const compilerOptions: ts.CompilerOptions = {
      *     ...tsconfig.compilerOptions,
-     *     ...(nestiaConfig.compilerOptions || {})
+     *     ...(nestiaConfig.compilerOptions ?? {})
      * }
      * ```
      */
     compilerOptions?: StripEnums<ts.CompilerOptions>;
+
+    /**
+     * Whether to assert parameter types or not.
+     *
+     * If you configure this property to be `true`, all of the function
+     * parameters of SDK library would be checked through
+     * [`typia.assert<T>()` function](https://typia.io/docs/validators/assert/).
+     *
+     * This option would make your SDK library compilation time a little bit slower,
+     * but would enahcne the type safety even in the runtime level.
+     *
+     * @default false
+     */
+    assert?: boolean;
+
+    /**
+     * Whether to optimize JSON string conversion 10x faster or not.
+     *
+     * If you configure this property to be `true`, the SDK library would utilize the
+     * [`typia.assertStringify<T>() function`](https://github.com/samchon/typia#enhanced-json)
+     * to boost up JSON serialization speed and ensure type safety.
+     *
+     * This option would make your SDK library compilation time a little bit slower,
+     * but would enhance JSON serialization speed 10x faster. Also, it can ensure type
+     * safety even in the rumtime level.
+     *
+     * @default false
+     */
+    json?: boolean;
+
+    /**
+     * Whether to wrap DTO by primitive type.
+     *
+     * If you don't configure this property as `false`, all of DTOs in the
+     * SDK library would be automatically wrapped by {@link Primitive} type.
+     *
+     * For refenrece, if a DTO type be capsuled by the {@link Primitive} type,
+     * all of methods in the DTO type would be automatically erased. Also, if
+     * the DTO has a `toJSON()` method, the DTO type would be automatically
+     * converted to return type of the `toJSON()` method.
+     *
+     * @default true
+     */
+    primitive?: boolean;
 }
 export namespace INestiaConfig {
     /**
