Change website content a little bit

--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -44,7 +44,10 @@ import Stack from '@mui/material/Stack';
 Nestia is a set of helper libraries for [NestJS](https://docs.nestjs.com), supporting below features:
 
   - `@nestia/core`: super-fast decorators
-  - `@nestia/sdk`: evolved SDK and Swagger generator
+  - `@nestia/sdk`: 
+    - SDK generator for clients
+    - Swagger generator evolved than ever
+    - Automatic E2E test functions generator
   - `nestia`: just CLI (command line interface) tool
 
 <br/>
