--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -11,7 +11,7 @@ Besides, `nestia` needs only pure Typescript type. You don't need to define any 
 
 
 
-## Examples
+## Demonstration
 If you're confusing how DTO of `NestJS` and `nestia` are different, just see example codes below.
 
 At first, look at the first (*`Triple duplicated NestJS DTO`*) tab, and find the `BbsArticle.files` property, enhanced by blue coloured blocks. Looking at the `files` property, how do you feel? Just defining an array object type, you've to call 5 decorator functions. If you take any mistake when using the decorator like omitting `isArray` property, it would be a critical runtime erorr.
