--- a/website/pages/docs/pure.mdx
+++ b/website/pages/docs/pure.mdx
@@ -6,7 +6,7 @@ import { Tabs, Tab } from 'nextra-theme-docs'
 
 You know what? `NestJS` needs triple duplicated DTO schema definitions. The 1st is defining TypeScript type, the 2nd and 3rd are calling decorator functions of `class-validator` and `@nestjs/swagger`. It's not only annoying, but also error-prone. If you take any mistake on the 2nd or 3rd, it can't be detected by TypeScript compiler. It will be detected only at runtime. Another words, it is not type safe.
 
-Besides, `nestia` needs only pure Typescript type. You don't need to define any extra schema like `class-validator` or `@nestjs/swagger`. Just define pure TypeScript type only (especially recommend to use `interface` type), then `nestia` will do all the rest.
+Besides, `nestia` needs only pure TypeScript type. You don't need to define any extra schema like `class-validator` or `@nestjs/swagger`. Just define pure TypeScript type only (especially recommend to use `interface` type), then `nestia` will do all the rest.
 
 
 
@@ -14,7 +14,7 @@ Besides, `nestia` needs only pure Typescript type. You don't need to define any 
 ## Demonstration
 If you're confusing how DTO of `NestJS` and `nestia` are different, just see example codes below.
 
-At first, look at the first (*`Triple duplicated NestJS DTO`*) tab, and find the `BbsArticle.files` property, enhanced by blue coloured blocks. Looking at the `files` property, how do you feel? Just defining an array object type, you've to call 5 decorator functions. If you take any mistake when using the decorator like omitting `isArray` property, it would be a critical runtime erorr.
+At first, look at the first (*`Triple duplicated NestJS DTO`*) tab, and find the `BbsArticle.files` property, enhanced by blue coloured blocks. Looking at the `files` property, how do you feel? Just defining an array object type, you've to call 7 decorator functions. If you take any mistake when using the decorator like omitting `isArray` property, it would be a critical runtime erorr.
 
 Besides, `nestia` needs only one line. Click the second (*`Pure Nestia DTO`*) tab, and find the `IAttachmentFile.files` property. Only one line being used, and `IBbsArticle` and `IAttachment` types are not even class, but just interface types. Comparing it to the first tab, how do you feel? Isn't it more simple and readable?
 
@@ -25,7 +25,10 @@ This is the power of `nestia`, with pure TypeScript type.
     <span>Pure Nestia DTO</span>,
 ]}>
     <Tab>
-```typescript filename="BbsArticle.ts" showLineNumbers {8-21}
+```typescript filename="BbsArticle.ts" showLineNumbers {11-27}
+import { ApiProperty } from "@nestjs/swagger";
+import { ArrayNotEmpty, IsArray, IsObject, IsOptional, IsString, Match, MaxLength, Type, ValidateNested } from "class-validator";
+
 export class BbsArticle {
     @ApiProperty({
         format: "uuid",
@@ -40,8 +43,10 @@ export class BbsArticle {
         type: () => AttachmentFile,
         nullable: true,
         isArray: true,
+        minItems: 1,
         description: "List of attached files.",
     })
+    @ArrayNotEmpty()
     @IsArray()
     @IsObject()
     @IsOptional()
@@ -82,6 +87,8 @@ export class AttachmentFile {
         pattern: "^[a-zA-Z0-9-_]+$",
         description: "File name.",
     })
+    @Matches(/^[a-z0-9]+$/)
+    @MaxLength(255)
     @IsOptional()
     @IsString()
     name!: string | null;
@@ -93,6 +100,8 @@ export class AttachmentFile {
         pattern: "^[a-zA-Z0-9-_]+$",
         description: "File extension.",
     })
+    @Matches(/^[a-z0-9]+$/)
+    @MaxLength(8)
     @IsOptional()
     @IsString()
     extension!: string | null;
@@ -107,7 +116,7 @@ export class AttachmentFile {
 ```
     </Tab>
     <Tab>
-```typescript filename="IBbsArticle.ts" showLineNumbers {9-12}
+```typescript filename="IBbsArticle.ts" showLineNumbers {9-14}
 export interface IBbsArticle {
     /**
      * Primary Key.
@@ -118,6 +127,8 @@ export interface IBbsArticle {
 
     /**
      * List of attached files.
+     * 
+     * @minItems 1
      */
     files: IAttachmentFile[] | null;
 
@@ -498,3 +509,7 @@ exports.BbsArticlesController = BbsArticlesController;
 ```
     </Tab>
 </Tabs>
+
+![Assert Function Benchmark](https://github.com/samchon/typia/raw/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz/images/assert.svg)
+
+> Measured on [Intel i5-1135g7, Surface Pro 8](https://github.com/samchon/typia/tree/master/benchmark/results/11th%20Gen%20Intel(R)%20Core(TM)%20i5-1135G7%20%40%202.40GHz#assert)
